--- a/magomed.html
+++ b/magomed.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>магомед</title>
+    <title>Ерунда</title>
     <style>
         header{
             text-align: center;
